objects/Acquisition_Financials__c.object
<CustomObject>
    <fields>
        <fullName>AccoundID__c</fullName>
        <label>AccoundID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_iD__c</fullName>
        <label>Account iD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actuals__c</fullName>
        <label>Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amended_Contract__c</fullName>
        <label>Amended Contract</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barter_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Barter Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_country__c</fullName>
        <label>Billing country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Classification_Name__c</fullName>
        <label>Booking Classification Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Dollar__c</fullName>
        <label>Closed Won Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <label>ContractStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Implemented__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Implemented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_id__c</fullName>
        <label>Contract id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_type_20__c</fullName>
        <label>Contract type 2.0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractnumber__c</fullName>
        <label>Contractnumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Year__c</fullName>
        <label>Deal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <label>DeveloperName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MYD_USD__c</fullName>
        <label>MYD USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_Type__c</fullName>
        <label>Master Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_name__c</fullName>
        <label>Month name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_num__c</fullName>
        <label>Month num</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Amount_Opp__c</fullName>
        <label>Net Amount Opp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Close_Month__c</fullName>
        <label>Opp Close Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Id__c</fullName>
        <label>Opp Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_Name__c</fullName>
        <label>Opp Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_type__c</fullName>
        <label>Opportunity type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunityid__c</fullName>
        <label>Opportunityid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_USD__c</fullName>
        <label>Other USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>OwnerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owners_Role__c</fullName>
        <label>Owner's Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_BCT__c</fullName>
        <label>Product Family BCT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_code__c</fullName>
        <label>Product code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_family_old__c</fullName>
        <label>Product family old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_line__c</fullName>
        <label>Product line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <label>Renewal Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Value_USD__c</fullName>
        <label>Renewal Value USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RenewedContract__c</fullName>
        <label>RenewedContract</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_User_Id__c</fullName>
        <label>SF User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_NBB_USD__c</fullName>
        <label>Total NBB USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price_USD__c</fullName>
        <label>Total Price USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UFR_USd__c</fullName>
        <label>UFR USd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Account_Id__c</fullName>
        <label>Unique Account Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id_Opp__c</fullName>
        <label>Unique Id Opp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weighted_Popeline__c</fullName>
        <label>Weighted Popeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Total_Price_USD__c</fullName>
        <label>Weighted Total Price USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>cloud</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>probability__c</fullName>
        <label>probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product_family__c</fullName>
        <label>product family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stagename__c</fullName>
        <label>stagename</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Acquisition Financials</label>
    <nameField>
        <label>Acquisition Financials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acquisition Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>